Fixed "About" section vertical alignment bug

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,8 @@ body {
 
 section {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 section.dark {
